Правка в карточке родителя2

--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -1122,7 +1122,8 @@ input:-webkit-autofill {
 .color-recent-classes-card>.card-lk_title>div.card-lk_title-data {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-start !important;
+    align-items: flex-start;
 }
 
 .color-recent-classes-card>.card-lk_title>div>span {
