--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -75,6 +75,7 @@
     justify-content: space-between;
     padding: 0 50px;
     flex-direction: column;
+
 }
 
 .lk-wrapper {
@@ -2217,9 +2218,131 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
     font-weight: 700;
 }
 
+/*------------Страница слоты-----------------*/
+.slot-section {
+    container-type: inline-size;
+    container-name: slots;
+    margin-top: 20px;
+}
+
+.slots {
+    padding: 20px 0;
+    margin: 10px 0;
+    display: grid;
+    grid-template-columns: 170px auto;
+    align-items: center;
+    background: #ae00d408;
+    border-radius: 10px;
+}
+
+.slots_data {
+    font-family: 'Nunito-Bold';
+    font-style: normal;
+    font-weight: 700;
+    color: var(--colorFontContent);
+    font-size: 24px;
+    padding: 15px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slots_time {
+    display: grid;
+    height: 200px;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+    padding: 0 0 0 30px;
+    border-left: 1px solid var(--main-color);
+    align-items: center;
+}
+
+.slots_time>form>div {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px
+}
+
+.slots_time-item {
+    font-family: 'Nunito-Bold';
+    font-style: normal;
+    font-weight: 700;
+    color: var(--colorFontContent);
+    font-size: 16px;
+    display: block;
+    position: relative;
+    top: -1px;
+}
+
+.slots_time>form>div>div>input.uk-checkbox {
+    border: 2px solid var(--colorFontContent);
+    border-radius: 2px;
+    height: 18px;
+    width: 18px;
+}
+
+.slots_time>form>div>div>input.uk-checkbox:checked {
+    background-color: var(--main-color);
+    border: 2px solid var(--main-color);
+}
+
+
+
 /*-----------------------------------------*/
 
 /*-------Адаптив------------------*/
+@container slots (max-width: 800px) {
+    .slots_data {
+        font-size: 18px;
+    }
+
+    .slots_time {
+        height: 250px;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+        padding: 0 0 0 20px;
+    }
+
+}
+
+@container slots (max-width: 550px) {
+    .slots {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .slots_data {
+        padding: 0 15px 15px;
+        height: fit-content;
+        width: 95%;
+        margin-bottom: 20px;
+        border-bottom: 1px solid var(--main-color);
+    }
+
+    .slots_time {
+        height: 250px;
+        grid-template-columns: repeat(3, 1fr);
+        padding: 0;
+        border-left: 0px;
+        gap: 30px;
+    }
+
+    .slots_time>form>div {
+        gap: 5px;
+    }
+}
+
+@container slots (max-width: 400px) {
+    .slots_time {
+        height: fit-content;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
 @container next-class-card-educator (max-width: 560px) {
     .color-next-class-card.educator>.card-lk_title {
         flex-direction: column;
