--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -2284,9 +2284,11 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
     width: 18px;
 }
 
-.slots_time>form>div>div>input.uk-checkbox:checked {
+.slots_time>form>div>div>input.uk-checkbox:checked,
+.slots_time>form>div>div>input.uk-checkbox:disabled:checked {
     background-color: var(--main-color);
     border: 2px solid var(--main-color);
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2214%22%20height%3D%2211%22%20viewBox%3D%220%200%2014%2011%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Cpolygon%20fill%3D%22%23fff%22%20points%3D%2212%201%205%207.5%202%205%201%205.5%205%2010%2013%201.5%22%20%2F%3E%0A%3C%2Fsvg%3E%0A");
 }
 
 /*-----------------------------------------*/
@@ -2327,9 +2329,11 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
     border-radius: 2px;
 }
 
-.assent>form>fieldset>div>div>input:checked {
+.assent>form>fieldset>div>div>input:checked,
+.assent>form>fieldset>div>div>input:disabled:checked {
     border: 2px solid var(--main-color);
     background-color: var(--main-color) !important;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2214%22%20height%3D%2211%22%20viewBox%3D%220%200%2014%2011%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Cpolygon%20fill%3D%22%23fff%22%20points%3D%2212%201%205%207.5%202%205%201%205.5%205%2010%2013%201.5%22%20%2F%3E%0A%3C%2Fsvg%3E%0A");
 }
 
 .assent {
@@ -2363,6 +2367,10 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
 
 .text-dogovora>p {
     padding: 10px 0;
+}
+
+.text-dogovora-items>li>p {
+    padding: 10px 0 0;
 }
 
 .text-dogovora>p>a {
@@ -2483,16 +2491,19 @@ ol.text-dogovora-items ol ol li::before {
 
 .items-punkt>p {
     display: flex;
-    gap: 10px;
+    gap: 7px;
     font-family: 'Nunito';
     font-weight: 500;
     font-size: 17px;
 }
 
 .items-punkt>p::before {
-    content: '\2022';
+    content: '.';
     display: block;
     position: relative;
+    font-size: 3em;
+    color: var(--colorFontContent);
+    top: -14px;
 }
 
 /*-----------------------------------------*/
@@ -2503,6 +2514,12 @@ ol.text-dogovora-items ol ol li::before {
         font-size: 15px;
         line-height: 20px;
         padding: 5px 0;
+    }
+
+    .text-dogovora-items>li>p {
+        padding: 5px 0;
+        font-size: 15px;
+        line-height: 20px;
     }
 
     .text-dogovora_header {
@@ -2557,6 +2574,11 @@ ol.text-dogovora-items ol ol li::before {
         gap: 6px;
         font-size: 15px;
         line-height: 16px;
+    }
+
+    .items-punkt>p::before {
+        font-size: 2.5em;
+        top: -10px;
     }
 
     .items-punkt {
